--- a/.github/workflows/build-installer.yml
+++ b/.github/workflows/build-installer.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           draft: false
           prerelease: false
-          release_name: ${{ GITHUB_RUN_ID }}
+          release_name: ${{ github.run_id }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
       
