--- a/.github/workflows/build-installer.yml
+++ b/.github/workflows/build-installer.yml
@@ -14,6 +14,11 @@ jobs:
     # The type of runner that the job will run on
     runs-on: windows-latest
 
+    env:
+      BuildTime: 00
+      BuildBranch: None
+      BuildId: None
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
 
@@ -28,15 +33,17 @@ jobs:
         run: |
           cd datalad-gui-windows-installer
           .\build_windows_installer.ps1
-
+          $BuildTime = Get-Date -format yyyymmddHHmmss
+          $BuildBranch = git branch --show-current
+          $BuildId = "$BuildTime-$BuildBranch"
       - name: Create installer release
         uses: actions/create-release@v1
         id: create_release
         with:
           draft: false
           prerelease: false
-          release_name: ${{ github.run_id }}
-          tag_name: ${{ github.ref }}
+          release_name: ${{ env.BuildId }}
+          tag_name: tag-${{ env.BuildId }}
           body_path: datalad-gui-windows-installer/CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ github.token }}
