--- a/.github/workflows/vartest.yml
+++ b/.github/workflows/vartest.yml
@@ -19,13 +19,16 @@ jobs:
       - name: Set Variable
         run: |
           $BuildTime = Get-Date -format yyyymmddHHmmss
-          $BuildBranch = git branch --show-current
+          $BuildBranch = "master"
           $BuildId = "$BuildTime-$BuildBranch" 
-          echo build_id="$BuildId"
-          echo build_id="$BuildId" >> $GITHUB_ENV
+          echo '${env:GIHUB_ENV}'=${env:GITHUB_ENV}
+          echo "build_id=$BuildId"
+          echo "build_id=$BuildId" >> ${env:GITHUB_ENV}
         shell: powershell
 
       - name: Use variable
         run: |
-          echo env.build_id: ${{ env.build_id }}
+          echo env.build_id=${{ env.build_id }}
+          echo `$build_id=$build_id
+          echo '${env:build_id}'=${env:build_id}
         shell: powershell
