fix the month in release-tags

--- a/.github/workflows/build-installer.yml
+++ b/.github/workflows/build-installer.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           cd datalad-gui-windows-installer
           $build_out = .\build_windows_installer.ps1
-          $build_time = Get-Date -format yyyymmddHHmmss
+          $build_time = Get-Date -format yyyyMMddHHmm
           $build_branch = echo $build_out|Select-String -Pattern "installed_version:"
           $build_branch = $build_branch.ToString().Substring(19)
           echo "build_id=$build_time-$build_branch" >> ${env:GITHUB_ENV}
